# albion-accountant

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  compile_windows.sh  full_market_quick_buy.pcapng  full_market_quick_sell.pcapng  hosts.txt  quick_buy_and_sell.pcapng  release.sh  run-live.sh  run.sh
.github/workflows/: ci.yml
docs/: migration.md  protocol-mapping.md
examples/: auction_buy_offer_request.json  auction_buy_offer_response.json  auction_get_requests_request.json  auction_get_requests_response.json  auction_sell_specific_item_request.json  auction_sell_specific_item_response.json  combined.txt
src/: browser.rs  capture.rs  cli.rs  config.rs  error.rs  event_codes.rs  google_sheets.rs  hosts.rs  ingress.rs  lib.rs  live.rs  live_adapter.rs  main.rs  names.rs  operation_codes.rs  packet.rs  pcap.rs  pcapng_adapter.rs  photon.rs  protocol18.rs  store.rs  trades.rs  tray.rs  util.rs  web.rs
src/albion/: correlator.rs  decoder.rs  event_codes.rs  hosts.rs  hosts.txt  ids.rs  market.rs  market_decode.rs  market_mapper.rs  mod.rs  operation_codes.rs  session.rs  transaction.rs
src/capture/: mod.rs  pcap_capture.rs
src/decode_engine/: extract.rs  mod.rs  photon.rs  protocol18.rs  types.rs
src/models/: cached_order.rs  mod.rs  world_map.rs
src/requests/: auction_buy_offer.rs  auction_get_offers.rs  auction_get_requests.rs  auction_sell_specific_item.rs  mod.rs
src/responses/: auction_get_offers.rs  auction_get_requests.rs  auction_trade.rs  mod.rs
src/sheets/: client.rs  mod.rs  row.rs
src/trade_mapping/: semantics.rs
tests/: albion_live_end_to_end.rs  albion_live_replay.rs  ingress_adapters.rs  market_mapping.rs  photon_command_decode.rs  protocol16_decode.rs  quick_ops_capture_decode.rs  replay_parity.rs  sheets_contract.rs
tests/fixtures/: bad_string_length.hex  command_envelope_valid.hex  event_payload_183.json  event_payload_58.json  market_flow_fixture_metadata.json  market_packet_valid.expected.json  market_packet_valid.hex  protocol16_bad_byte_array_length.hex  (+19 more)
webapp/: index.html  package-lock.json  package.json
(+17 files in other folders)
