[package]
name = "albion-accountant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
pcap = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
google-sheets4 = "6"
yup-oauth2 = "11"
hyper-rustls = "0.27"
hyper-util = "0.1"

[dev-dependencies]
temp-env = "0.3"
