[package]
name = "albion-accountant"
version = "0.1.0"
edition = "2024"

[dependencies]
albion-network-lib = { path = "../albion-network-lib" }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
google-sheets4 = "7.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.178"
tao = "0.35.3"
tray-icon = { version = "0.24.0", default-features = false, features = ["gtk"] }
